Bug 1168159 - Copy changes to Content Services site

--- a/bedrock/mozorg/templates/mozorg/contentservices/about.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/about.html
@@ -16,7 +16,7 @@
   </p>
 
   <p>
-    {{ _('Advertising is the primary way that the Web is funded, but sometimes comes at the expense of users’ experience, as users may want to access information and services with as few interruptions as possible.') }}
+    {{ _('Advertising is the primary way that the Web is funded, but it sometimes comes at the expense of users’ experience, as users may want to access information and services with as few interruptions as possible.') }}
     {{ _('Also, advertising often relies on data that is gathered from users without their explicit consent and without respecting their preferences.') }}
   </p>
 
