--- a/bedrock/mozorg/templates/mozorg/contentservices/faq.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/faq.html
@@ -36,7 +36,7 @@
         {{ _('There are two key differences:') }}
       </p>
       <p>
-        {{ _('Users see tiles early in their flow, before they become involved in a task, on a clean page where your brand can stand out from other content.') }}
+        {{ _('Users see Tiles early in their flow, before they become involved in a task, on a clean page where your brand can stand out from other content.') }}
         {{ _('Our products do not interrupt the browsing experience; they catch users when they are most receptive to seeing new information.') }}
       </p>
       <p>
@@ -86,7 +86,7 @@
     <h3 data-accordion-role="tab">{{ _('Will you only work with brand owners or also sell to advertising agencies / publishers?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
-        {{ _('No: we plan to work with brands, agencies, and advertising technology companies.') }}
+        {{ _('We plan to work with brands, agencies, and advertising technology companies.') }}
         {{ _('We are talking to brands, agencies (creative, media, digital, social, content) and advertising technology companies.') }}
       </p>
     </div>
@@ -101,7 +101,7 @@
     <h3 data-accordion-role="tab">{{ _('What’s the potential reach?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
-        {{ _('Firefox reaches 100s of millions of people across 110 countries, including over 80 million in the US, and roughly a quarter of the world’s desktop Web users.') }}
+        {{ _('Firefox reaches hundreds of millions of people across 110 countries, including over 80 million in the US, and roughly a quarter of the world’s desktop Web users.') }}
         {% trans url=url('mozorg.contentservices.start') %}
           Please <a href="{{ url }}">contact us</a> for information about our reach in specific markets.
         {% endtrans %}
@@ -176,7 +176,7 @@
       <p>
         {{ _('We are interested in content that will enhance a user’s experience of Firefox and which will add value for both them and the advertiser.') }}
         {{ _('There are certain categories of promotional content which we will not work with.') }}
-        {{ _('Those include adult content, drugs/alcohol/tobacco, illegal gambling, weapons.') }}
+        {{ _('Those include adult content, drugs/alcohol/tobacco, illegal gambling and weapons.') }}
       </p>
     </div>
   </section>
@@ -190,7 +190,7 @@
     <h3 data-accordion-role="tab">{{ _('How do I see results?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
-        {{ _('We will work with you on your reporting requirements and provide what you need.') }}
+        {{ _('We will work with you on your reporting requirements and provide what you need, such as aggregate impressions and/or click information.') }}
         {{ _('For example, we can deliver aggregate impressions and click information.') }}
         {{ _('We recommend that you use a custom destination, to more easily reconcile our reports with your own.') }}
       </p>
@@ -226,7 +226,7 @@
     <h3 data-accordion-role="tab">{{ _('Have other companies had success with Suggested Tiles?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
-        {{ _('Suggested Tiles is recently launched.') }}
+        {{ _('Suggested Tiles has recently launched.') }}
         {{ _('We have had a number of successful partnerships with our Directory Tiles product, and we are happy to share with you the best practices we have learned as a result.') }}
       </p>
     </div>
