--- a/bedrock/mozorg/templates/mozorg/contentservices/index.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/index.html
@@ -50,7 +50,7 @@
   <ul class="links">
     <li class="link-tiles">
       <h4><a href="{{ url('mozorg.contentservices.tiles') }}">{{ _('What are Tiles?') }}</a></h4>
-      <p>{{ _('Learn how tiles can quickly address millions of users within select interest areas.') }}</p>
+      <p>{{ _('Learn how Tiles can quickly address millions of users within select interest areas.') }}</p>
     </li>
     <li class="link-faq">
       <h4><a href="{{ url('mozorg.contentservices.faq') }}">{{ _('FAQs') }}</a></h4>
