--- a/bedrock/mozorg/templates/mozorg/contentservices/tiles.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/tiles.html
@@ -14,16 +14,16 @@
   <p>
     {{ _('Online advertising can be an ongoing battle for user attention — a fight against content as well as other ads.') }}
     {{ _('And consumers, increasingly concerned about the privacy of their online data, are opting out in greater numbers.') }}
-    {{ _('A lack of transparency can also be a problem for digital advertisers often making ROI hard to measure.') }}
+    {{ _('A lack of transparency can also be a problem for digital advertisers, often making ROI hard to measure.') }}
     {{ _('Nobody really wins.') }}
   </p>
 
   <p>
-   {{ _('What if ads could work with users, instead of against them?') }}
+   {{ _('What if ads could work <i>with</i> users, instead of against them?') }}
   </p>
 
   <p>
-    {{ _('We believe this is possible, and that is why we developed Tiles. Tiles are are visual bookmarks or thumbnails that Firefox users see each time they open a new browser tab.') }}
+    {{ _('We believe this is possible, and that is why we developed Tiles. Tiles are visual bookmarks or thumbnails that Firefox users see each time they open a new browser tab.') }}
     {{ _('By providing sponsored content in Tiles, as long as it’s relevant, brands can reach large numbers of consumers, scaling to millions more over time, while enhancing the user experience.') }}
   </p>
 
@@ -45,7 +45,7 @@
     {{ _('Mozilla Suggested Tiles offer sponsored placement in a designated interest category.') }}
     {{ _('The browser makes these suggestions based on categories of sites that the user has already shown an interest in.') }}
     {{ _('To protect users’ privacy, Mozilla strictly limits what data we collect about users’ interaction with Tiles.') }}
-    {{ _('We don’t collect browsing history, always encrypt data in transmission and discard IP addresses after a week.') }}
+    {{ _('We don’t collect browsing histories, we always encrypt data in transmission and we anonymize and aggregate IP addresses after a week.') }}
   </p>
 
   <p>
@@ -57,8 +57,8 @@
   </p>
 
   <p>
-    {{ _('Users can always opt out of any Tiles experience, so those who see your advert remain receptive.') }}
-    {{ _('Firefox users can also view the rationale behind every suggestion with a single click — so advertisers are connecting with an engaged audience.') }}
+    {{ _('Users can always opt out of any Tiles experience, so those who see your ad remain receptive.') }}
+    {{ _('Firefox users can also view the rationale behind every suggestion with a single click — so advertisers know they are connecting with an engaged audience.') }}
   </p>
 
   <p>
