--- a/bedrock/mozorg/templates/mozorg/contentservices/start.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/start.html
@@ -30,7 +30,7 @@
   {% endtrans %}
   </p>
   <p>
-    {{ _('Then complete the contact form below, and we will be in touch shortly to discuss next steps.') }}
+    {{ _('Complete the contact form below, and we will be in touch shortly to discuss next steps.') }}
   </p>
 
   <div id="content-form-success" class="{% if not form_success %}cloaked{% endif %}">
@@ -152,7 +152,7 @@
     </div>
 
     <div class="field footer-field">
-      <input type="submit" id="sf-form-submit" name="submit" value="{{ _('Submit my request') }}" class="button" />
+      <input type="submit" id="sf-form-submit" name="submit" value="{{ _('Submit') }}" class="button" />
     </div>
 
   </form>
