Fix bug 1168235 - add Optimizely to Firefox release notes

--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -14,6 +14,12 @@
   {% stylesheet 'firefox_releasenotes' %}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-releasenotes-optimizely') %}
+     {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {# channel_name is for display purposes where needed.  #}
 {% set channel_name = channel_name|default('') %}
 
