--- a/bedrock/mozorg/templates/mozorg/mission.html
+++ b/bedrock/mozorg/templates/mozorg/mission.html
@@ -26,6 +26,12 @@
   {% javascript 'mosaic' %}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('mozorg-mission-optimizely') %}
+     {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block mosaic %}
 {% include "mozorg/mosaic-grid.html" %}
 {% endblock %}
