--- a/bedrock/legal/templates/legal/fraud-report.html
+++ b/bedrock/legal/templates/legal/fraud-report.html
@@ -71,13 +71,13 @@
       </ol>
 
       <p>
-      {% trans url1=url('foundation.trademarks.faq'), url2='https://affiliates.mozilla.org/',
+      {% trans url1=url('foundation.trademarks.faq'), url2=url('mozorg.contribute.friends'),
         url3=url('styleguide.home') %}
         While the uses of our trademarks described above are not allowed,
         there are lots of ways our community members can use our
         trademarks without requesting permission. For more information,
         please review our <a href="{{ url1 }}">Trademark FAQs</a> or
-        visit <a href="{{ url2 }}">Firefox Affiliates</a>. Also review the
+        visit <a href="{{ url2 }}">Firefox Friends</a>. Also review the
         <a href="{{ url3 }}">Mozilla Style Guide</a>.
       {% endtrans %}
       </p>
