--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -109,27 +109,15 @@
     <div class="promo-grid-inner">
       <ul class="promo-grid {% if tweets %}has-twitter-promo{% endif %}">
       {# L10n: Begin home page promos. Line breaks are for visual formatting only. #}
-      {% if l10n_has_tag('hello_promo') %}
-        <li id="promo-1" class="item promo-large-portrait firefox-hello" data-name="Meet Firefox Hello" tabindex="0">
-          <h2 class="primary go">{{ _('Meet<br> Firefox Hello') }}</h2>
-          <a class="panel-link" href="{{ url('firefox.hello') }}">
+        <li id="promo-1" class="item promo-large-portrait firefox-android" tabindex="0" data-name="Put your Firefox on your Android">
+          <h2 class="primary go">{{ _('Put your Firefox on your Android') }}</h2>
+          <a class="panel-link" href="{{ url('firefox.android.index') }}">
             <div class="secondary">
-              <h3>{{ _('The easiest way to connect for free over video.') }}</h3>
-              <p class="more">{{ _('Try Firefox Hello') }}</p>
+              <h3>{{ _('The features <br>you love. <br>The privacy <br>you trust.') }}</h3>
+              <p class="more">{{ _('Learn about <br>Firefox for Android') }}</p>
             </div>
           </a>
         </li>
-      {% else %}
-        <li id="promo-1" class="item promo-large-portrait mission" data-name="Discover what drives our mission" tabindex="0">
-          <h2 class="primary go">{{ _('Discover <br>what drives our mission') }}</h2>
-          <a class="panel-link" href="{{ url('mozorg.about.manifesto') }}">
-            <div class="secondary">
-              <h3>{{ _('See the principles <br>that guide everything <br>we do.') }}</h3>
-              <p class="more">{{ _('Read the <br>Mozilla Manifesto') }}</p>
-            </div>
-          </a>
-        </li>
-      {% endif %}
       {% if LANG == 'en-US' and waffle.switch('patriot-act-home-promo') %}
         <li id="promo-2" class="item promo-small-landscape advocacy" data-name="Help end mass surveillance">
           <a class="panel-link" href="https://sendto.mozilla.org/page/s/section-215-petition?ref=20150414Advocacy_Surveil&amp;utm_campaign=20150414Advocacy_Surveil&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=Advocacy_tile_small">
@@ -207,22 +195,38 @@
           </a>
         </li>
       {% endif %}
-        <li id="promo-10" class="item promo-large-portrait firefox-android" tabindex="0" data-name="Put your Firefox on your Android">
-          <h2 class="primary go">{{ _('Put your Firefox on your Android') }}</h2>
-          <a class="panel-link" href="{{ url('firefox.android.index') }}">
-            <div class="secondary">
-              <h3>{{ _('The features <br>you love. <br>The privacy <br>you trust.') }}</h3>
-              <p class="more">{{ _('Learn about <br>Firefox for Android') }}</p>
-            </div>
-          </a>
-        </li>
       {% if l10n_has_tag('fx10_independent') %}
-        <li id="promo-11" class="item promo-large-landscape firefox-developer" tabindex="0" data-name="Introducing Firefox Developer Edition">
+        <li id="promo-10" class="item promo-large-portrait firefox-developer" tabindex="0" data-name="Introducing Firefox Developer Edition">
+          {% if l10n_has_tag('firefox_friends') %}
+          <h2 class="primary go">{{ _('Try Firefox Developer Edition') }}</h2>
+          {% else %}
           <h2 class="primary go">{{ _('Introducing Firefox Developer Edition') }}</h2>
+          {% endif %}
           <a class="panel-link" href="{{ url('firefox.developer') }}">
             <div class="secondary">
               <h3>{{ _('The only browser made only for developers.') }}</h3>
               <p class="more">{{ _('Get Firefox Developer Edition') }}</p>
+            </div>
+          </a>
+        </li>
+      {% else %}
+        <li id="promo-10" class="item promo-large-portrait mission" data-name="Discover what drives our mission" tabindex="0">
+          <h2 class="primary go">{{ _('Discover <br>what drives our mission') }}</h2>
+          <a class="panel-link" href="{{ url('mozorg.about.manifesto') }}">
+            <div class="secondary">
+              <h3>{{ _('See the principles <br>that guide everything <br>we do.') }}</h3>
+              <p class="more">{{ _('Read the <br>Mozilla Manifesto') }}</p>
+            </div>
+          </a>
+        </li>
+      {% endif %}
+      {% if l10n_has_tag('firefox_friends') %}
+        <li id="promo-11" class="item promo-large-landscape firefox-friends" tabindex="0" data-name="Introducing Firefox Friends">
+          <h2 class="primary go">{{ _('Introducing <br>Firefox Friends') }}</h2>
+          <a class="panel-link" href="https://friends.mozilla.org">
+            <div class="secondary">
+              <h3>{{ _('Join. Share. <br>Get rewarded.') }}</h3>
+              <p class="more">{{ _('Join Firefox Friends') }}</p>
             </div>
           </a>
         </li>
