--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -876,7 +876,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Support
 .promo-large-landscape.support {
-    background: #00af84; // tealish green
+    background: #e55525; // orange
 
     h2 {
         padding: 100px @baseLine 0 @baseLine;
@@ -949,43 +949,25 @@ html[lang|="en"] {
 
 
 /****************************************************************************/
-// Firefox Hello
-.promo-large-portrait.firefox-hello {
-    background: #00a9dc; // turquoise
+// Firefox Friends
+.promo-large-landscape.firefox-friends {
+    background: #e55525; // orange
 
     h2 {
-        padding-top: 220px;
-        background: url(/media/img/home/voices/promos/hello/hello.svg) center 55px no-repeat;
-        .background-size(120px 120px);
-    }
-}
-
-html[lang|="en"] {
-    .promo-large-portrait.firefox-hello {
-        h3 {
-            padding-top: @baseLine * 4;
-        }
+        padding-top: 135px;
+        background: url(/media/img/home/voices/promos/firefoxfriends/firefox-friends.png) center 20px no-repeat;
     }
 }
 
 
 /****************************************************************************/
 // Firefox Developer Edition
-.promo-large-landscape.firefox-developer {
+.promo-large-portrait.firefox-developer {
     background: #005da5; // dark blue
 
     h2 {
         padding-top: 125px;
         background: url(/media/img/home/voices/promos/firefoxdev/firefoxdev.png) center 15px no-repeat;
-    }
-}
-
-html[lang|='en'] {
-    .promo-large-landscape.firefox-developer {
-        h2 {
-            max-width: 440px;
-            margin: 0 auto;
-        }
     }
 }
 
@@ -1757,18 +1739,18 @@ html[lang|="en"] {
         }
     }
 
+    // Firefox Friends
+    .promo-large-landscape.firefox-friends {
+        h2 {
+            background-image: url(/media/img/home/voices/promos/firefoxfriends/firefox-friends-high-res.png);
+            .background-size(75px, 100px);
+        }
+    }
+
     // Firefox Developer Edition
     .promo-large-portrait.firefox-developer {
         h2 {
             background-image: url(/media/img/home/voices/promos/firefoxdev/firefoxdev-high-res.png);
-            .background-size(105px, 105px);
-        }
-    }
-
-    // Firefox 10th Anniversary
-    .promo-large-portrait.firefox-independent {
-        h2 {
-            background-image: url(/media/img/home/voices/promos/independent/independent-high-res.png);
             .background-size(105px, 105px);
         }
     }
