Bug 1168901. FxOS Orange Klif Mauritius availability.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -185,6 +185,12 @@
             <li><a class="cherry-mobile" href="http://www.cherrymobile.com.ph/products/smart-social/ace">Cherry Mobile Ace</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="mu">
+          <h3>{{ _('Mauritius') }}</h3>
+          <ul>
+            <li><a class="orange" href="http://www.orange.mu/mobile-phones/details/handset/99/orange-orange-klif.html">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="mx">
           <h3>{{_('Mexico')}}</h3>
           <ul>
