--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -89,6 +89,7 @@
               <option value="lu">{{ _('Luxembourg') }}</option>
               <option value="mk">{{ _('Macedonia') }}</option>
               <option value="mg">{{ _('Madagascar') }}</option>
+              <option value="mu">{{ _('Mauritius') }}</option>
               <option value="mx">{{ _('Mexico') }}</option>
               <option value="me">{{ _('Montenegro') }}</option>
               <option value="mm">{{ _('Myanmar') }}</option>
@@ -2322,6 +2323,7 @@
                   <ul class="comma-list">
                     <li>{{ _('Cameroon') }}</li>
                     <li>{{ _('Madagascar') }}</li>
+                    <li>{{ _('Mauritius') }}</li>
                     <li>{{ _('Senegal') }}</li>
                     <li>{{ _('Tunisia') }}</li>
                   </ul>
