--- a/etc/cron.d/bedrock-dev.tmpl
+++ b/etc/cron.d/bedrock-dev.tmpl
@@ -11,3 +11,4 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 */10 * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-php.sh {{ log }}
 */20 * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-django.sh {{ log }}
 */15 * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-locale.sh {{ log }}
+0    * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-product-details.sh {{ log }}
