Fix "Try Hello" link visited color.

--- a/media/css/firefox/hello/index.less
+++ b/media/css/firefox/hello/index.less
@@ -71,6 +71,10 @@ main {
     cursor: pointer;
     .transition(all 0.3s ease);
 
+    &:visited {
+        color: #fff;
+    }
+
     &:hover {
         text-decoration: none;
     }
