Updating bug bounty pages with changes to program

--- a/bedrock/security/templates/security/base.html
+++ b/bedrock/security/templates/security/base.html
@@ -13,6 +13,7 @@
     (url('security.advisories'), 'advisories', 'Security Advisories'),
     (url('security.known-vulnerabilities'), 'known-vulnerabilities', 'Known Vulnerabilities'),
     (url('security.bug-bounty'), 'bug-bounty', 'Bug Bounty'),
+    (url('security.bug-bounty.hall-of-fame'), 'hall-of-fame', 'Firefox Hall Of Fame'),
     ('https://blog.mozilla.com/security/', 'blog', 'Security Blog'),
 ] %}
 
