--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -43,7 +43,7 @@
             <li>Armin Razmdjou</li>
             <li>Atte Kettunen</li>
             <li>Enrique Rando</li>
-            <li>Hanno Bock</li>
+            <li>Hanno B&ouml;ck</li>
             <li>Holger Fuhrmannek</li>
             <li>l.pontorieri</li>
             <li>Joev</li>
@@ -68,13 +68,13 @@
          <h4>4th Quarter 2014</h4>
           <ul>
             <li>Abhishek Arya</li>
-            <li>codyc</li>
+            <li>Cody Crews</li>
             <li>James Kettle</li>
             <li>Michal Zalewski</li>
             <li>lifeasageek</li>
             <li>Looben Yang</li>
             <li>Michal Zalewski</li>
-            <li>mitchwharper</li>
+            <li>Mitchell Harper</li>
             <li>Skylined</li>
             <li>teterinis</li>
           </ul>
@@ -94,8 +94,8 @@
             <li>Jordi Chancel</li>
             <li>Abhishek Arya</li>
             <li>Zaza Crub</li>
-            <li>Looban Yang</li>
-            <li>codyc</li>
+            <li>Looben Yang</li>
+            <li>Cody Crews</li>
             <li>James Kitchener</li>
             <li>Atte Kettunen</li>
             <li>Jethro Beekman</li>
