Bug 1162057. Implement aurora-bars mixin.
- Remove older, image-based implementations.

--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -13,7 +13,7 @@
 {% block page_desc %}{{ _('Learn all about Firefox Hello and see for yourself how easy it is to have a free video conversation with anyone, anywhere, right from your browser') }}{% endblock %}
 {% block page_image %}{{ static('img/firefox/hello/hello-share.jpg') }}{% endblock %}
 {% block body_id %}firefox-hello{% endblock %}
-{% block body_class %}rays-light-blue{% endblock %}
+{% block body_class %}{% endblock %}
 
 {% block site_css %}
   {% stylesheet 'firefox_hello' %}
