--- a/bedrock/firefox/templates/firefox/hello/start.html
+++ b/bedrock/firefox/templates/firefox/hello/start.html
@@ -16,7 +16,7 @@
 {% block page_title %}{{ _('Firefox Hello') }}{% endblock %}
 {% block page_title_suffix %}{% endblock %}
 {% block body_id %}firefox-hello-start{% endblock %}
-{% block body_class %}rays-light-blue{% endblock %}
+{% block body_class %}{% endblock %}
 
 {% block string_data %}
 data-get-started-title="{{ _('Welcome to Hello') }}"
