--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -986,6 +986,11 @@ html[lang="ja"] #privacy p {
             width: auto;
             margin-bottom: 0;
         }
+
+        .send-to {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     html[dir="rtl"] {
