--- a/media/css/firefox/hello/index.less
+++ b/media/css/firefox/hello/index.less
@@ -6,6 +6,10 @@
 
 // Base template overrides
 
+#outer-wrapper {
+    .aurora-bars(#c3dcf2, lighten(#c3dcf2, 3%));
+}
+
 #wrapper {
     width: 100%;
     margin-top: -162px; // family nav
