--- a/media/css/firefox/hello/start.less
+++ b/media/css/firefox/hello/start.less
@@ -110,6 +110,7 @@ aside {
 }
 
 #outer-wrapper {
+    .aurora-bars(#c3dcf2, lighten(#c3dcf2, 3%));
     min-height: 100%;
     border: none;
     padding: 0;
