--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -6,10 +6,9 @@
 */
 
 #outer-wrapper {
-    background: #0c99d5 url(/media/img/firefox/os-new/raysoflight.png) 0 0 no-repeat;
+    .aurora-bars();
 }
 #wrapper {
-    background-color: #0C99D5;
     width: 100%;
     padding-bottom: 0;
 
