--- a/bedrock/firefox/templates/firefox/australis/fx38_0_5/firstrun.html
+++ b/bedrock/firefox/templates/firefox/australis/fx38_0_5/firstrun.html
@@ -30,6 +30,12 @@
   {% stylesheet 'firefox_fx38_0_5_firstrun' %}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-firstrun-optimizely') %}
+    {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block site_header %}
   <header id="masthead">
     {% block tabzilla_tab %}
